--- a/web/index.htm
+++ b/web/index.htm
@@ -2,23 +2,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet Quick Start Guide Example</title>
+	<title>Woody map</title>
 	<meta charset="utf-8" />
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="tinymap.css" />
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
-<link rel="stylesheet" href="tinymap.css" />
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
 
 </head>
 <body>
+		<header class="header">
+				<div class="logo-img">
+					<img src="icons/logo.svg">
+				</div>
+				<div class="kk logo-text">
+					Woody
+				</div>
+
+				<div class="kk about">
+					<a href="#" data-toggle="modal" data-target="#myModal">О проекте</a>
+				</div>
+				<div class="kk download">
+					<a href="#">Скачать базу
+					<span class="download-comment">csv, 59kb</span>
+					</a>
+				</div>
+		</header>
+
     <div id="map" style=""></div>
 
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">О проекте Woody</h4>
+      </div>
+      <div class="modal-body">
+        <!-- <h2>Woody</h2> -->
+				<p>Идея по&nbsp;созданию интерактивной карты городских зеленых насаждений г.&nbsp;Калининграда возникла у&nbsp;городской общественности после участившихся случаев вырубки и&nbsp;гибели деревьев в&nbsp;результате варварской обрезки.</p>
+
+				<p>В 1939 г. зелёные насаждения в г. Кённигсберге выглядели так:</p>
+				<img class="maps" src="icons/1939.png" 	width=100%>
+				<p>А сейчас они же в г. Калининграде выглядят так:</p>
+				<img class="maps" src="icons/2016.png" width=100%>
+				<p>В&nbsp;октябре 2016&nbsp;г. общественной группой &laquo;Аллеи Калининградской области&raquo; была подана на&nbsp;конкурс, а&nbsp;затем одобрена заявка на&nbsp;участие в&nbsp;Экохакатоне, организованном Теплицей социальных технологий и&nbsp;Пражским гражданским центром.</p>
+				<p>Результатом работы на&nbsp;хакатоне стали карта, на&nbsp;которую можно наносить любое дерево не&nbsp;только в&nbsp;нашем городе, но&nbsp;и&nbsp;в&nbsp;любой точке мира. Нами было разработано мобильное приложение Woody на&nbsp;платформе Android. Наша общественная группа призывает всех неравнодушных граждан присоединиться к&nbsp;нашему движению по&nbsp;спасению деревьев!</p>
+				<a href="#"><img src="icons/play.png" width="150px"></a>
+				<a href="https://github.com/nextgis/tree_mapper"><img src="icons/git.png" width="150px"/></a>
+      </div>
+
+    </div>
+  </div>
+</div>
+
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <script src='leaflet-omnivore.min.js'></script>
     <script src="proj4-compressed.js"></script>
     <script src="proj4leaflet.js"></script>
+
     <script src="Autolinker.min.js"></script>
 
     <script src="config.js"></script>
@@ -27,4 +75,3 @@
 
 </body>
 </html>
-
