Update about in web site

--- a/web/index.htm
+++ b/web/index.htm
@@ -26,8 +26,8 @@
 					<a href="#" data-toggle="modal" data-target="#myModal">О проекте</a>
 				</div>
 				<div class="kk download">
-					<a href="#">Скачать базу
-					<span class="download-comment">csv, 59kb</span>
+					<a href="http://176.9.38.120/tree_mapping/api/resource/10/geojson">Скачать базу
+					<span class="download-comment">GeoJSON</span>
 					</a>
 				</div>
 		</header>
@@ -51,6 +51,13 @@
 				<img class="maps" src="icons/2016.png" width=100%>
 				<p>В&nbsp;октябре 2016&nbsp;г. общественной группой &laquo;Аллеи Калининградской области&raquo; была подана на&nbsp;конкурс, а&nbsp;затем одобрена заявка на&nbsp;участие в&nbsp;Экохакатоне, организованном Теплицей социальных технологий и&nbsp;Пражским гражданским центром.</p>
 				<p>Результатом работы на&nbsp;хакатоне стали карта, на&nbsp;которую можно наносить любое дерево не&nbsp;только в&nbsp;нашем городе, но&nbsp;и&nbsp;в&nbsp;любой точке мира. Нами было разработано мобильное приложение Woody на&nbsp;платформе Android. Наша общественная группа призывает всех неравнодушных граждан присоединиться к&nbsp;нашему движению по&nbsp;спасению деревьев!</p>
+                <p>Проект не был бы осуществлен без помощи:
+                    <ul>
+                        <li>Идейный вдохновитель - Лариса Станченко (Институт природопользования, ТР и Г БФУ им. Канта)</li>
+                        <li>Дизайнер - Александр Калашников (<a href="http://urbica.co/">Urbica</a>)</li>
+                        <li>Разработчик - Дмитрий Барышников (<a href="http://nextgis.ru/">NextGIS</a>)</li>
+                    </ul>
+                </p>
 				<a href="#"><img src="icons/play.png" width="150px"></a>
 				<a href="https://github.com/nextgis/tree_mapper"><img src="icons/git.png" width="150px"/></a>
       </div>
