Add test fairy link

--- a/web/index.htm
+++ b/web/index.htm
@@ -60,6 +60,7 @@
                 </p>
 				<a href="#"><img src="icons/play.png" width="150px"></a>
 				<a href="https://github.com/nextgis/tree_mapper"><img src="icons/git.png" width="150px"/></a>
+                <a href="https://tsfr.io/kmGDNy"><img src="icons/tf.png" width="150px"/></a>
       </div>
 
     </div>
